tests/sksl/errors/Unreachable.glsl

void call_after_return() {
    return;
    call_after_return();
}
